--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -39,50 +39,44 @@ block content
 
                         // card 0 apply
 
-                        //- .fixed_block.null
-                        //-     #front
-                        //-         .ui.right.teal.corner.label(title="虚位以待")
-                        //-             i.fa-lock.fa
-                        //-         .imgbox
-                        //-             a.ta_cover(href="javascript:void(0);", target="_blank")
-                        //-     #back
-                        //-         #back2front.circular.ui.icon.button(title="返回")
-                        //-             i.fa.fa-chevron-left
-                        //-         .ui.form
-                        //-             .ui.message
-                        //-                 ul.list
-                        //-                     li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
-                        //-                     li 提交后，会有人联系你，问你到底想干嘛。
-                        //-             .field
-                        //-                 label 你叫啥(网名之类的称呼也可以)
-                        //-                 input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
-                        //-             .field
-                        //-                 label 邮箱地址(*必填)
-                        //-                 input#input_email(type="email",placeholder="输入邮箱地址",name="email")
-                        //-             .field(style="text-align:center")
-                        //-                 #applyBtn.ui.button.green
-                        //-                     | 写好了，提交
+                        .fixed_block.null
+                            #front
+                                .ui.right.teal.corner.label(title="虚位以待")
+                                    i.fa-lock.fa
+                                .imgbox
+                                    a.ta_cover(href="javascript:void(0);", target="_blank")
+                            #back
+                                #back2front.circular.ui.icon.button(title="返回")
+                                    i.fa.fa-chevron-left
+                                .ui.form
+                                    .ui.message
+                                        ul.list
+                                            li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
+                                            li 提交后，会有人联系你，问你到底想干嘛。
+                                    .field
+                                        label 你叫啥(网名之类的称呼也可以)
+                                        input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
+                                    .field
+                                        label 邮箱地址(*必填)
+                                        input#input_email(type="email",placeholder="输入邮箱地址",name="email")
+                                    .field(style="text-align:center")
+                                        #applyBtn.ui.button.green
+                                            | 写好了，提交
 
 
 
                         // card 1 bg+text
 
-                        .fixed_block.card_1
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                //- .ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee659t3wbrj20h00h00u6.jpg);background-size: cover;")
-                                .ta_cont
-                                    p
-                                        //- | 两姓联姻，一堂缔约，良缘永结，匹配同称。看此日桃花灼灼，宜室宜家，卜他年瓜瓞绵绵，尔昌尔炽。谨以白头之约，书向鸿笺，好将红叶之盟，载明鸳谱。
-                                        | <i class="fa fa-quote-left"></i> 我跑上门，打开楼梯。说完睡衣，穿上祷告，关上床，钻进灯。所有这一切都是因为，道晚安时你给我的一吻。 <i class="fa fa-quote-right"></i>
-                                        span
-                                            | —— 由“不愿意透露姓名的某人”投递
+                        // .fixed_block.card_1
+                        //    .ui.right.teal.corner.label(title="友情置顶")
+                        //        i.fa-star.fa
+                        //    .imgbox
+                        //        .ta_cont
+                        //            p
+                        //                | <i class="fa fa-quote-left"></i> 我跑上门，打开楼梯。说完睡衣，穿上祷告，关上床，钻进灯。所有这一切都是因为，道晚安时你给我的一吻。 <i class="fa fa-quote-right"></i>
+                        //                span
+                        //                    | —— 由“不愿意透露姓名的某人”投递
 
-
-
-                                //- .ta_title
-                                //-     | 此位置已经有人预订了
 
                         // card 2 bg+short text
 
