--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -37,7 +37,7 @@ block content
 
 
 
-                        // card 0 apply
+                        //- card 0 apply
 
                         //- .fixed_block.null
                         //-     #front
@@ -63,19 +63,16 @@ block content
                         //-                 #applyBtn.ui.button.green
                         //-                     | 写好了，提交
 
-
-
-                        // card 1 bg+text
-
-                        // .fixed_block.card_1
-                        //    .ui.right.teal.corner.label(title="友情置顶")
-                        //        i.fa-star.fa
-                        //    .imgbox
-                        //        .ta_cont
-                        //            p
-                        //                | <i class="fa fa-quote-left"></i> 我跑上门，打开楼梯。说完睡衣，穿上祷告，关上床，钻进灯。所有这一切都是因为，道晚安时你给我的一吻。 <i class="fa fa-quote-right"></i>
-                        //                span
-                        //                    | —— 由“不愿意透露姓名的某人”投递
+                        //- card 1 bg+text
+                        //- .fixed_block.card_1
+                        //-    .ui.right.teal.corner.label(title="友情置顶")
+                        //-        i.fa-star.fa
+                        //-    .imgbox
+                        //-        .ta_cont
+                        //-            p
+                        //-                | <i class="fa fa-quote-left"></i> 我跑上门，打开楼梯。说完睡衣，穿上祷告，关上床，钻进灯。所有这一切都是因为，道晚安时你给我的一吻。 <i class="fa fa-quote-right"></i>
+                        //-                span
+                        //-                    | —— 由“不愿意透露姓名的某人”投递
 
                         //- card blocking
                         .fixed_block.card_1
@@ -90,16 +87,24 @@ block content
                                     | 预订了此位置的墨冥说，这里放ta崇拜的偶像
 
 
-                        // card 2 bg+short text
+                        //- card 2 bg+short text
 
-                        .fixed_block
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                                .ta_title
-                                    a(href="http://www.wandoujia.com/join", target="_blank")
-                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚，我们一起工作吧
+                        //- .fixed_block
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                        //-         .ta_title
+                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
+                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚，我们一起工作吧
+
+
+                        //- card 1 bg+text
+                        .fixed_block.card_1
+                           .ui.right.teal.corner.label(title="友情置顶")
+                               i.fa-star.fa
+                           .imgbox
+                                .ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1eecs6731k0j20go0go3zb.jpg);background-size: cover;")
                 .chat
 
     .noticeWrap
@@ -116,10 +121,10 @@ block content
 
     include templates/chat_tmpl
 
-    // script(src="/js/player/player.jquery.rotate.js")
-    // script(src="/js/player/player.jquery.grab.js")
-    // script(src="/js/player/player.jquery.jplayer.min.js")
-    // script(src="/js/player/player.zen.js")
+    //- script(src="/js/player/player.jquery.rotate.js")
+    //- script(src="/js/player/player.jquery.grab.js")
+    //- script(src="/js/player/player.jquery.jplayer.min.js")
+    //- script(src="/js/player/player.zen.js")
 
     script(src="js/player/jquery.transform.js")
     script(src="js/player/jquery.grab.js")
@@ -131,8 +136,8 @@ block content
     script(defer, src="/js/plugins.js")
     script(defer, src="/js/perber.js")
     
-    // script(defer, src="/js/player/player.zen.js")
-    // script(src="/js/plugins.min.js")
-    // script(defer, src="/js/perber.min.js")
+    //- script(defer, src="/js/player/player.zen.js")
+    //- script(src="/js/plugins.min.js")
+    //- script(defer, src="/js/perber.min.js")
 
 
