--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -30,38 +30,38 @@ block content
                                 i.fa-bullhorn.fa
                             | ╰(*￣0￣*)╯ 怎么玩儿：<br><br>
                             | 1. 如果对某条内容不感兴趣，或者觉得没有必要留在网上，那就<mark>一直按着它</mark>，然后点“x”把它删掉吧。在这儿，不怕内容少，就怕内容多。<br><br>
-                            | 2. 如果不想让自己发的内容被删掉，可以点击“有空”——如果还有空的话——提交你的联系方式。名额只有一个，4月1日之前免费。<br><br> 
+                            | 2. <mark>如果不想让自己发的内容被删掉，可以点击“有空”——如果还有空的话——提交你的联系方式。名额只有 1 个，4月1日之前免费。</mark><br><br> 
                             | 3. 把图片拖拽到输入框，可以上传图片。直接发GIF图片的链接是不能出现图片的，除非是来自新浪的GIF图。instagram的图片也是支持的。(￢∀￢) <br><br> 
-                            | 4. 可以识别虾米的歌曲URL（注意歌曲URL是 <mark>http://www.xiami.com/song/11234567</mark>这种），现在识别的速度有点慢，因为blah blah的原因。(￣(ｴ)￣)<br><br>
-                            | 5. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。好了，飞走~~ ʅ(‾◡◝)ʃ
+                            | 4. 可以识别虾米的歌曲URL（类似 <mark>http://www.xiami.com/song/11234567</mark>这种）<br><br>
+                            | 5. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。对技术感兴趣的可以去<a target="_blank" href="https://github.com/naoyeye/Perber">这里</a>看代码，简单的<mark>socket.io + node.js</mark>。好了，飞走~~ ʅ(‾◡◝)ʃ
 
 
 
                         //- card 0 apply
 
-                        //- .fixed_block.null
-                        //-     #front
-                        //-         .ui.right.teal.corner.label(title="虚位以待")
-                        //-             i.fa-lock.fa
-                        //-         .imgbox
-                        //-             a.ta_cover(href="javascript:void(0);")
-                        //-     #back
-                        //-         #back2front.circular.ui.icon.button(title="返回")
-                        //-             i.fa.fa-chevron-left
-                        //-         .ui.form
-                        //-             .ui.message
-                        //-                 ul.list
-                        //-                     li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
-                        //-                     li 提交后，会有人联系你，问你到底想干嘛。
-                        //-             .field
-                        //-                 label 你叫啥(网名之类的称呼也可以)
-                        //-                 input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
-                        //-             .field
-                        //-                 label 邮箱地址(*必填)
-                        //-                 input#input_email(type="email",placeholder="输入邮箱地址",name="email")
-                        //-             .field(style="text-align:center")
-                        //-                 #applyBtn.ui.button.green
-                        //-                     | 写好了，提交
+                        .fixed_block.null
+                            #front
+                                .ui.right.teal.corner.label(title="虚位以待")
+                                    i.fa-lock.fa
+                                .imgbox
+                                    a.ta_cover(href="javascript:void(0);")
+                            #back
+                                #back2front.circular.ui.icon.button(title="返回")
+                                    i.fa.fa-chevron-left
+                                .ui.form
+                                    .ui.message
+                                        ul.list
+                                            li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
+                                            li 提交后，会有人联系你，问你到底想干嘛。没搞明白这个是干嘛之前别乱提交。
+                                    .field
+                                        label 你叫啥(网名之类的称呼也可以)
+                                        input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
+                                    .field
+                                        label 邮箱地址(*必填)
+                                        input#input_email(type="email",placeholder="输入邮箱地址",name="email")
+                                    .field(style="text-align:center")
+                                        #applyBtn.ui.button.green
+                                            | 写好了，提交
 
                         //- card 1 bg+text
                         //- .fixed_block.card_1
@@ -75,36 +75,36 @@ block content
                         //-                    | —— 由“不愿意透露姓名的某人”投递
 
                         //- card blocking
-                        .fixed_block.card_1
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(href="http://en.wikipedia.org/wiki/James_Gandolfini", target="_blank", style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ee8oxycjgcj20go0gowga.jpg); background-size:cover;")
-                                //.ta_cont
-                                //    p(style="text-align:center")
-                                //        | 此位置已被“晃荡”预订<br>稍后更新内容
-                                .ta_title
-                                    | 预订了此位置的墨冥说，这里放ta崇拜的偶像
+                        //- .fixed_block.card_1
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(href="http://en.wikipedia.org/wiki/James_Gandolfini", target="_blank", style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ee8oxycjgcj20go0gowga.jpg); background-size:cover;")
+                        //-         //.ta_cont
+                        //-         //    p(style="text-align:center")
+                        //-         //        | 此位置已被“晃荡”预订<br>稍后更新内容
+                        //-         .ta_title
+                        //-             | 预订了此位置的墨冥说，这里放ta崇拜的偶像
 
 
                         //- card 2 bg+short text
 
-                        //- .fixed_block
-                        //-     .ui.right.teal.corner.label(title="友情置顶")
-                        //-         i.fa-star.fa
-                        //-     .imgbox
-                        //-         a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                        //-         .ta_title
-                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
-                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚，我们一起工作吧
+                        .fixed_block
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                                .ta_title
+                                    a(href="http://www.wandoujia.com/join", target="_blank")
+                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
 
 
                         //- card 1 bg+text
-                        .fixed_block.card_1
-                           .ui.right.teal.corner.label(title="友情置顶")
-                               i.fa-star.fa
-                           .imgbox
-                                .ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1eecs6731k0j20go0go3zb.jpg);background-size: cover;")
+                        //- .fixed_block.card_1
+                        //-    .ui.right.teal.corner.label(title="友情置顶")
+                        //-        i.fa-star.fa
+                        //-    .imgbox
+                        //-         .ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1eecs6731k0j20go0go3zb.jpg);background-size: cover;")
                 .chat
 
     .noticeWrap
