fix name & link

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -82,7 +82,7 @@ block content
                                 a.ta_cover(href="http://en.wikipedia.org/wiki/James_Gandolfini", target="_blank", style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ee8oxycjgcj20go0gowga.jpg); background-size:cover;")
                                 .ta_cont
                                     p(style="text-align:center")
-                                       | 此位置已被“芝居”预订<br>3月16日更新内容
+                                       | 此位置已被“<a href="http://www.douban.com/people/jumbu/" target="_blank">jumbu</a>”预订<br>3月16日更新内容
                                 //- .ta_title
                                 //-     | 预订了此位置的墨冥说，这里放ta崇拜的偶像
 
