--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -89,22 +89,25 @@ block content
 
                         //- card 2 bg+short text
 
-                        .fixed_block
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                                .ta_title
-                                    a(href="http://www.wandoujia.com/join", target="_blank")
-                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
+                        //- .fixed_block
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                        //-         .ta_title
+                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
+                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
 
 
                         //- card 1 bg+text
-                        //- .fixed_block.card_1
-                        //-    .ui.right.teal.corner.label(title="友情置顶")
-                        //-        i.fa-star.fa
-                        //-    .imgbox
-                        //-         .ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1eecs6731k0j20go0go3zb.jpg);background-size: cover;")
+                        .fixed_block.card_3
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-smile-o.fa
+                            .ta_cont
+                                h4 调查：要不要增加“投票”功能？
+                                p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划增加投票功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
+                                #vote_bar
+                                #vote_info 此调查会在4月3日截止
                 .chat
 
     .noticeWrap
