--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -39,29 +39,29 @@ block content
 
                         //- card 0 apply
 
-                        .fixed_block.null
-                            #front
-                                .ui.right.teal.corner.label(title="虚位以待")
-                                    i.fa-lock.fa
-                                .imgbox
-                                    a.ta_cover(href="javascript:void(0);")
-                            #back
-                                #back2front.circular.ui.icon.button(title="返回")
-                                    i.fa.fa-chevron-left
-                                .ui.form
-                                    .ui.message
-                                        ul.list
-                                            li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
-                                            li 提交后，会有人联系你，问你到底想干嘛。没搞明白这个是干嘛之前别乱提交。
-                                    .field
-                                        label 你叫啥(网名之类的称呼也可以)
-                                        input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
-                                    .field
-                                        label 邮箱地址(*必填)
-                                        input#input_email(type="email",placeholder="输入邮箱地址",name="email")
-                                    .field(style="text-align:center")
-                                        #applyBtn.ui.button.green
-                                            | 写好了，提交
+                        //- .fixed_block.null
+                        //-     #front
+                        //-         .ui.right.teal.corner.label(title="虚位以待")
+                        //-             i.fa-lock.fa
+                        //-         .imgbox
+                        //-             a.ta_cover(href="javascript:void(0);")
+                        //-     #back
+                        //-         #back2front.circular.ui.icon.button(title="返回")
+                        //-             i.fa.fa-chevron-left
+                        //-         .ui.form
+                        //-             .ui.message
+                        //-                 ul.list
+                        //-                     li 如果不清楚这个位置是干嘛用的，请参考“怎么玩儿”的第2条规则。
+                        //-                     li 提交后，会有人联系你，问你到底想干嘛。没搞明白这个是干嘛之前别乱提交。
+                        //-             .field
+                        //-                 label 你叫啥(网名之类的称呼也可以)
+                        //-                 input#input_name(type="text",placeholder="输入称呼",name="name", maxlength="20")
+                        //-             .field
+                        //-                 label 邮箱地址(*必填)
+                        //-                 input#input_email(type="email",placeholder="输入邮箱地址",name="email")
+                        //-             .field(style="text-align:center")
+                        //-                 #applyBtn.ui.button.green
+                        //-                     | 写好了，提交
 
                         //- card 1 bg+text
                         //- .fixed_block.card_1
@@ -85,18 +85,6 @@ block content
                         //-                | 此位置已被“<a href="http://www.douban.com/people/jumbu/" target="_blank">jumbu</a>”预订<br>3月16日更新内容
 
 
-                        //- card 2 bg+short text
-
-                        //- .fixed_block
-                        //-     .ui.right.teal.corner.label(title="友情置顶")
-                        //-         i.fa-star.fa
-                        //-     .imgbox
-                        //-         a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                        //-         .ta_title
-                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
-                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
-
-
                         //- card 1 bg+text
                         .fixed_block.card_3
                             .ui.right.teal.corner.label(title="友情置顶")
@@ -106,6 +94,17 @@ block content
                                 p <strong>功能描述：</strong><br><br>为了保证Perber中的内容质量，计划增加投票功能：每个人都可以对内容进行“赞”和“踩”。<br>如果某条内容得到的“赞”比“踩”多，则在一定时期内(一周？)不能删除；反之，则可以随时被任何人删除。
                                 #vote_bar
                                 #vote_info 此调查会在4月3日截止
+
+                        //- card 2 bg+short text
+
+                        .fixed_block
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                                .ta_title
+                                    a(href="http://www.wandoujia.com/join", target="_blank")
+                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
                 .chat
 
     .noticeWrap
