--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -75,14 +75,16 @@ block content
                         //-                    | —— 由“不愿意透露姓名的某人”投递
 
                         //- card blocking
-                        //- .fixed_block.card_1
-                        //-     .ui.right.teal.corner.label(title="友情置顶")
-                        //-         i.fa-star.fa
-                        //-     .imgbox
-                        //-         a.ta_cover(href="http://en.wikipedia.org/wiki/James_Gandolfini", target="_blank", style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ee8oxycjgcj20go0gowga.jpg); background-size:cover;")
-                        //-         .ta_cont
-                        //-             p(style="text-align:center")
-                        //-                | 此位置已被“<a href="http://www.douban.com/people/jumbu/" target="_blank">jumbu</a>”预订<br>3月16日更新内容
+                        .fixed_block.card_4
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/ed133892gw1eegi25aklrj20hv0m8q3y.jpg); background-size:cover;")
+                                .ta_cont
+                                    p
+                                        | Sean Malto
+                                        span
+                                            | 由 <a href="http://www.douban.com/people/coolzi/" target="_blank")>彼得潘</a> 投递
 
 
                         //- card 1 bg+text
@@ -97,14 +99,14 @@ block content
 
                         //- card 2 bg+short text
 
-                        .fixed_block
-                            .ui.right.teal.corner.label(title="友情置顶")
-                                i.fa-star.fa
-                            .imgbox
-                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
-                                .ta_title
-                                    a(href="http://www.wandoujia.com/join", target="_blank")
-                                        | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
+                        //- .fixed_block
+                        //-     .ui.right.teal.corner.label(title="友情置顶")
+                        //-         i.fa-star.fa
+                        //-     .imgbox
+                        //-         a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                        //-         .ta_title
+                        //-             a(href="http://www.wandoujia.com/join", target="_blank")
+                        //-                 | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
                 .chat
 
     .noticeWrap
