--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -23,8 +23,7 @@ html(class="no-js", lang="en")
         link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
-        link(rel="stylesheet", href="/css/perber.css")
-        //- link(rel="stylesheet", href="/css/player.zen.css")
+        link(rel="stylesheet", href="/css/perber.min.css")
         link(rel="stylesheet", href="/css/player/circle.player.css")
 
         script(type="text/javascript",src="/js/libs/jquery-2.0.3.min.js")
