--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -123,11 +123,6 @@ block content
 
     include templates/chat_tmpl
 
-    //- script(src="/js/player/player.jquery.rotate.js")
-    //- script(src="/js/player/player.jquery.grab.js")
-    //- script(src="/js/player/player.jquery.jplayer.min.js")
-    //- script(src="/js/player/player.zen.js")
-
     script(src="js/player/jquery.transform.js")
     script(src="js/player/jquery.grab.js")
     script(src="js/player/jquery.jplayer.js")
@@ -135,11 +130,5 @@ block content
     script(src="js/player/circle.player.js")
 
     script(src="/socket.io/socket.io.js")
-    script(defer, src="/js/plugins.js")
-    script(defer, src="/js/perber.js")
-    
-    //- script(defer, src="/js/player/player.zen.js")
-    //- script(src="/js/plugins.min.js")
-    //- script(defer, src="/js/perber.min.js")
-
-
+    script(defer, src="/js/plugins.min.js")
+    script(defer, src="/js/perber.min.js")
