--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -10,14 +10,15 @@ html(class="no-js", lang="en")
     // <![endif]
 
     head
+        meta(name="description", content="All the words will gone, only the void forever lone")
+        meta(name="keywords", content="Perber, Anonymous, No-Data, Free-share, Privacy, Note, Secrecy, Clear, Node")
+        meta(name="author", content="J.Y Han(naoyeye)")
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
         meta(name="apple-mobile-web-app-capable", content="yes")
 
         title Perber
 
-        meta(name="description", content="")
-        meta(name="author", content="J.Y Han")
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no")
 
         link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
