--- a/perber/views/themes/default/pages_404.jade
+++ b/perber/views/themes/default/pages_404.jade
@@ -1,8 +1,8 @@
 extends layout
 
-
 block content
     link(rel="stylesheet", href="/css/pages404.css")
+    script(type="text/javascript",src="/js/pages404.js")
 
     #wrap
         #inner
@@ -13,43 +13,3 @@ block content
                         #pupils
 
             a.ui.button.green(href="/") back home
-
-
-    script
-        $(function() {
-            function getSize() {
-                t.w = $(window).width(),
-                t.h = $(window).height()
-            }
-
-            $(window).bind("load", function() {
-                window.scrollTo(0, 1)
-            })
-
-            var e = 0,
-                t = {};
-
-            getSize();
-
-            $(window).resize(function() {
-                getSize();
-            })
-            var r = {
-                e: $("#pupils")
-            };
-            r.x = parseInt(r.e.css("left")),
-            r.y = parseInt(r.e.css("top"));
-
-            $(document).mousemove(function(e) {
-                var n = {
-                    x: e.pageX / t.w * 2 - 1,
-                    y: e.pageY / t.h * 2 - 1
-                };
-                r.moveX = parseInt(n.x * 6 + r.x),
-                r.moveY = parseInt(n.y * 4 + r.y),
-                r.e.css({
-                    left: r.moveX,
-                    top: r.moveY
-                })
-            });
-        });
