--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -21,7 +21,7 @@ html(class="no-js", lang="en")
 
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no")
 
-        link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
+        link(href='http://fonts.googleapis.com/css?family=Special+Elite|Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/perber.css")
