--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -16,22 +16,22 @@ block content
                     i.fa.fa-question-circle
                     span Usage
 
-            #drop_zone.chat-input(data-bucket="#{bucket_name}")
+            #drop_zone.chat-input(data-bucket="#{bucket_name}", data-step="1", data-position="bottom", data-tooltipClass="step_1", data-intro="输入文字，或者把图片拖拽到这里。支持微博图片、instagram图片、虾米音乐链接。在这里发布的任何消息，都会实时显示在其他用户的眼前。")
                 .ui.form
                     .field
                         textarea(placeholder="Say something", maxlength="240")
                 #upimg
 
             .chat-list
-                #important
+                #important(data-step="2", data-position="bottom", data-tooltipClass="step_2", data-intro="这是置顶的内(guang)容(gao)，Perber会在这里不定期地推荐一些有意思的东西")
                     .chat-box
-                        .fixed_block
-                            .ui.right.teal.corner.label(title="通知")
-                                i.fa-bullhorn.fa
-                            | ╰(*￣0￣*)╯ 怎么玩儿：<br><br>
-                            | 1. 在顶部的输入框输入文字，或者把图片拖拽到输入框中。支持虾米音乐和instagram、新浪微博图片。<br><br>
-                            | 2. 长按，删除某条内容。<mark>如果不想让自己发的内容被删掉，可以点击“有空”——如果还有空的话——提交你的联系方式。名额只有 1 个，4月1日之前免费。</mark><br><br> 
-                            | 3. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。对技术感兴趣的可以去<a target="_blank" href="https://github.com/naoyeye/Perber">这里</a>看代码，简单的<mark>socket.io + node.js</mark>。好了，飞走~~ ʅ(‾◡◝)ʃ
+                        //- .fixed_block
+                        //-     .ui.right.teal.corner.label(title="通知")
+                        //-         i.fa-bullhorn.fa
+                        //-     | ╰(*￣0￣*)╯ 怎么玩儿：<br><br>
+                        //-     | 1. 在顶部的输入框输入文字，或者把图片拖拽到输入框中。支持虾米音乐和instagram、新浪微博图片。<br><br>
+                        //-     | 2. 长按，删除某条内容。<mark>如果不想让自己发的内容被删掉，可以点击“有空”——如果还有空的话——提交你的联系方式。名额只有 1 个，4月1日之前免费。</mark><br><br> 
+                        //-     | 3. “网站介绍”神马的点击右上角的图标就好了，反正也没人看。对技术感兴趣的可以去<a target="_blank" href="https://github.com/naoyeye/Perber">这里</a>看代码，简单的<mark>socket.io + node.js</mark>。好了，飞走~~ ʅ(‾◡◝)ʃ
 
 
                         //- //- card 1 bg+text
@@ -77,24 +77,40 @@ block content
                             .ui.right.teal.corner.label(title="友情置顶")
                                 i.fa-star.fa
                             .imgbox
-                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/ed133892gw1eegi25aklrj20hv0m8q3y.jpg); background-size:cover;")
-                                .ta_cont
-                                    p
-                                        | Sean Malto
-                                        span
-                                            | 由 <a href="http://www.douban.com/people/coolzi/" target="_blank")>彼得潘</a> 投递
+                                a.ta_cover(href="https://itunes.apple.com/cn/app/same/id531761928?mt=8", target="_blank" ,style="background-image:url(http://ww1.sinaimg.cn/large/61b8bbf4gw1ef4r7amb9jj20go0jgq4w.jpg); background-size:cover;")
 
-                        
+                        .fixed_block.card_4
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/ed133892gw1eegi25aklrj20hv0m8q3y.jpg); background-size:cover;")
+
+                                .ta_cont
+                                    p Sean Malto
+                                        span
+                                            | 由 <a href="http://www.douban.com/people/coolzi/" target="_blank">彼得潘</a> 投递
+
+                        .fixed_block.card_4
+                            .ui.right.teal.corner.label(title="友情置顶")
+                                i.fa-star.fa
+                            .imgbox
+                                a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef4swkg0arj20go0jgdj0.jpg); background-size:cover;")
+                                .ta_cont
+                                    p(style="padding-top: 300px;line-height:50px;")
+                                        span(style="font-size:20px;padding-top:0;background:rgba(255,255,255,.8);font-weight:bold;")
+                                            a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#111;")
+                                                | Freunde von Freunden
+
                         //- card 1 bg+text
-                        .fixed_block.card_1
-                           .ui.right.teal.corner.label(title="友情置顶")
-                               i.fa-star.fa
-                           .imgbox
-                               .ta_cont
-                                   p(style="font-size:38px; font-style='normal'; font-family:'Special Elite', cursive,Georgia,Cambria,'Times New Roman',Times,serif")
-                                       | <i class="fa fa-quote-left"></i> I miss you. <br> I love you. <i class="fa fa-quote-right"></i>
-                                       span
-                                           | —— nobody 2014.04.03
+                        //- .fixed_block.card_1
+                        //-    .ui.right.teal.corner.label(title="友情置顶")
+                        //-        i.fa-star.fa
+                        //-    .imgbox
+                        //-        .ta_cont
+                        //-            p(style="font-size:38px; font-style='normal'; font-family:'Special Elite', cursive,Georgia,Cambria,'Times New Roman',Times,serif")
+                        //-                | <i class="fa fa-quote-left"></i> I miss you. <br> I love you. <i class="fa fa-quote-right"></i>
+                        //-                span
+                        //-                    | —— nobody 2014.04.03
 
 
                         //- card 2 bg+short text
@@ -102,11 +118,14 @@ block content
                             .ui.right.teal.corner.label(title="友情置顶")
                                 i.fa-star.fa
                             .imgbox
-                                a.ta_cover(href="http://www.wandoujia.com/join", target="_blank", style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
+                                a.ta_cover(style="background-image:url(http://ww2.sinaimg.cn/large/ed133892gw1ee53b743uyj20go0gognh.jpg);background-size: cover;")
                                 .ta_title
                                     a(href="http://www.wandoujia.com/join", target="_blank")
                                         | (╭￣3￣)╭♡ &nbsp; 加入豌豆荚
-                .chat
+                .chat(data-step="3",
+                    data-position="top",
+                    data-tooltipClass="step_3",
+                    data-intro= "这里是大家发的消息（如果是空的，那就是有人把消息都删除了）。如果你觉得某条消息没意思，也可以一直按着它，然后点击“X”将它删除掉。任何人都可以删除这个页面里的所有消息。消息被删除时，它也会实时地从其他人眼前消失。就是这样了。")
 
     .noticeWrap
 
