--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -77,7 +77,12 @@ block content
                             .ui.right.teal.corner.label(title="友情置顶")
                                 i.fa-star.fa
                             .imgbox
-                                a.ta_cover(href="https://itunes.apple.com/cn/app/same/id531761928?mt=8", target="_blank" ,style="background-image:url(http://ww1.sinaimg.cn/large/61b8bbf4gw1ef4r7amb9jj20go0jgq4w.jpg); background-size:cover;")
+                                a.ta_cover(style="background-image:url(http://ww1.sinaimg.cn/large/61b8bbf4gw1ef4r7amb9jj20go0jgq4w.jpg); background-size:cover;")
+                                .ta_cont
+                                    p
+                                        span
+                                            a( title="去 APP store 下载", href="https://itunes.apple.com/cn/app/same/id531761928?mt=8", target="_blank", style="display:block; font-size: 0;height: 90px;margin-top: 25px;margin-left: 100px;margin-right: 100px;")
+                                                | 去 APP store 下载
 
                         .fixed_block.card_4
                             .ui.right.teal.corner.label(title="友情置顶")
@@ -97,8 +102,8 @@ block content
                                 a.ta_cover(style="background-image:url(http://ww4.sinaimg.cn/large/61b8bbf4gw1ef4swkg0arj20go0jgdj0.jpg); background-size:cover;")
                                 .ta_cont
                                     p(style="padding-top: 300px;line-height:50px;")
-                                        span(style="font-size:20px;padding-top:0;background:rgba(255,255,255,.8);font-weight:bold;")
-                                            a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#111;")
+                                        span(style="font-size:20px;padding-top:0;font-weight:bold;")
+                                            a(href="http://www.freundevonfreunden.com/", target="_blank", style="color:#fff;")
                                                 | Freunde von Freunden
 
                         //- card 1 bg+text
