fix wandou link bug

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -82,7 +82,7 @@ block content
                                 .ta_cont
                                     p(style="padding-top: 300px;line-height:50px;")
                                         span(style="font-size:12px;padding-top:0;")
-                                            a(href="www.wandoujia.com/join/", target="_blank", style="color:#3baa24;")
+                                            a(href="http://www.wandoujia.com/join/", target="_blank", style="color:#3baa24;")
                                                 | Join Wandou Labs
 
                         //- card blocking
