--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -160,6 +160,18 @@ block content
                     data-tooltipClass="step_3",
                     data-intro= "这里是大家发的消息（如果是空的，那就是有人把消息都删除了）。如果你觉得某条消息没意思，也可以一直按着它，然后点击“X”将它删除掉。任何人都可以删除这个页面里的所有消息。消息被删除时，它也会实时地从其他人眼前消失。就是这样了。")
 
+        #footer
+            .logo
+                a(href="http://www.perber.com/")
+                    i.fa.fa-dot-circle-o
+                    span Peber
+            p
+                | Made with ❤ by <a href="http://about.han.im/" target="_blank">J.Y Han</a> @ 2014
+            iframe(src="http://ghbtns.com/github-btn.html?user=naoyeye&repo=Perber&type=watch&count=true",
+  allowtransparency="true", frameborder="0", scrolling="0", width="95", height="20")
+            iframe(src="http://ghbtns.com/github-btn.html?user=naoyeye&repo=Perber&type=fork&count=true",
+  allowtransparency="true", frameborder="0", scrolling="0", width="95", height="20")
+
     .noticeWrap
 
 
