--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -11,7 +11,7 @@ html(class="no-js", lang="en")
 
     head
         meta(name="description", content="All the words will gone, only the void forever lone")
-        meta(name="keywords", content="Perber, Anonymous, No-Data, Free-share, Privacy, Note, Secrecy, Clear, Node")
+        meta(name="keywords", content="Perber")
         meta(name="author", content="J.Y Han(naoyeye)")
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
@@ -19,7 +19,7 @@ html(class="no-js", lang="en")
 
         title Perber
 
-        meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no, minimal-ui")
 
         link(href='http://fonts.googleapis.com/css?family=Special+Elite|Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
         link(rel="stylesheet", href="/css/semantic.min.css")
